# openlinear

./: .env.example  .gitignore  Justfile  LICENSE  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  test-apply-patch.js  turbo.json
.github/: README.md
.github/workflows/: deploy.yml  release.yml
.opencode-monitor/: deploy-watch.state
.sisyphus/: boulder.json
.sisyphus/drafts/: brainstorm-feature.md  github-auth-wireup.md
.sisyphus/evidence/: task-1-policy-coverage.txt  task-1-policy-fail.txt  task-2-forbidden-field.txt  task-2-valid-payload.txt  task-3-flag-matrix.txt  task-4-secret-roundtrip.txt  task-5-auth-no-secret.txt
.sisyphus/plans/: brainstorm-feature.md  dual-auth-project-repo.md  github-auth-wireup.md  god-mode-web-search-voice.md  hybrid-cloud-data-local-agents.md  landing-pages-redesign.md  openlinear-mvp.md  parallel-execution.md  tauri-migration.md
apps/api/: .env.example  esbuild.config.js  package.json  vitest.config.ts
apps/desktop/: package.json
apps/desktop-ui/: next.config.js  package.json  tailwind.config.ts
apps/desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: deeplink.rs  lib.rs  main.rs  opencode.rs  secure_storage.rs  sidecar.rs
apps/intro-video/: package.json  remotion.config.ts  tsconfig.json
apps/landing/: next.config.mjs  package.json  (+1 more)
docs/: ARCHITECTURE.md  PROJECT_CONTEXT.md
landing/: package.json
scripts/: benchmark_tps.py  build-sidecar.sh  deploy.sh  dev-web.sh  dev.sh  opencode-spike.ts  start.sh
(+220 files in other folders)
